repair contrast and other effects

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 1.5;
@@ -8,15 +8,15 @@ body {
 }
 
 .heading-primary {
-  font-size: 5.8rem;
+  font-size: 5.4rem;
   line-height: 1.2;
   font-weight: 700;
   color: $color-grey-dark-2;
-  letter-spacing: -3.5px;
+  letter-spacing: -1.5px;
 
   @include respond(phone) {
     font-size: 4.8rem;
-    letter-spacing: -3px;
+    letter-spacing: -1.5px;
   }
 }
 
