--- a/src/sass/components/_toolbox.scss
+++ b/src/sass/components/_toolbox.scss
@@ -57,7 +57,7 @@
       width: 4rem;
       height: 4rem;
       fill: $color-primary;
-      transform: translateY(1px);
+      // transform: translateY(1px);
       backface-visibility: hidden;
     }
 
