--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -20,7 +20,7 @@
     width: 2rem;
     height: 2rem;
     fill: $color-primary;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
 
     &:hover {
       transform: scale(1.3);
